# crescent_city

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pipeline.yaml  pyproject.toml
data/: AGENTS.md  README.md  archaeology_evidence_layers.csv  cascadia_paleoseismic_events.csv  cascadia_summary_stats.csv  climate_normals_1991_2020.csv  currents_categories.yaml  economic_history.csv  economic_sectors.csv  figure_provenance.csv  harbor_timeline_events.csv  healthcare_access_edges.csv  healthcare_access_nodes.csv  historical_events.json  housing_pipeline_projects.csv  last_chance_grade_metrics.csv  population_data.csv  redwood_conservation_milestones.csv  redwood_old_growth_acreage.csv  sea_level_scenarios.csv  smith_river_protection.csv  tsunami_1964_wave_sequence.csv  tsunami_events.csv
docs/: AGENTS.md  README.md  accessibility_reader_experience.md  architecture.md  audit_trail_limitations.md  claim_ledger.md  current_events_refresh.md  data_dictionary.md  data_validation_qa.md  environment_reproducibility.md  figure_maintenance.md  index.md  manuscript_authoring.md  project_overview.md  publication_checklist.md  quickstart.md  redteam_review_2026-05-15.md  release_archival_versioning.md  rendering_and_outputs.md  source_refresh_workflow.md  source_to_claim_audit.md  sources_provenance_ethics.md  testing_and_quality.md  visual_pdf_qa.md
manuscript/: 00_abstract.md  01_introduction.md  02_space.md  03_environment.md  04_cascadia.md  05_sea_level_rise.md  06_smith_river_ecology.md  07_redwood_parks.md  08_oil_spill.md  09_seawall_engineering.md  10_housing.md  (+53 more)
(+54 files in other folders)
